\name{NEWS}
\title{rgexf NEWS}
\encoding{UTF-8}

\section{CHANGES IN rgexf version 0.13.8 [2013-08-06]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New S3 method \code{plot.gexf}, implemented by Joshua B Kunst, shows the graph in the web browser by means of Sigma.js (!). 
      \item New functions \code{igraph.to.gexf} and \code{gexf.to.igraph} converts objects between \code{igraph} and \code{gexf} clases. Colors and attributes are preserved.
    }
  }
  \subsection{DEVELOPMENT}{
    \itemize{
      \item Improving general documentation.
      \item Just starting to add new options to \code{add.gexf.node/edge}, more precisely, passing attributes.
    }
  }
}

\section{CHANGES IN rgexf version 0.13.05 [2013-05-09]}{
  \subsection{BUG FIX}{
    \itemize{
      \item \code{sprintf} error when using other formats rather than double (issue 10).
      \item in \code{.addNodesEdges}, add support to case ``!attributes && vizattributes'' (issue 9).
    }
  }
}

\section{CHANGES IN rgexf version 0.13.03 [2013-03-14]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New functions \code{add.node.spell} and \code{add.edge.spell} now allow to work with nodes and edges time spells.
      \item New function \code{check.dpl.edges}, written in C, analyzes links and reports duplicates (marking them) and number of times the same link is repeated considering if the graph is directed or not.
      \item New function \code{switch.edges}, also written in C, allows to order links representations (source and target) in order to set the smallest id as source and the highest as target.
      \item Function \code{write.gexf} now has an improved error handler. Now parses objects before even opening the XML graph.
      \item Edges support id assignment and labeling.
    }
  }
  \subsection{FIXES}{
    \itemize{
      \item Small bug detected in viz attributes fixed.