@@ -13,3 +13,4 @@ R/rgexf\.R
 R/newxmlnode2\.R
 R/zzz\.R
 demo/gexfplot\.R
+.*\.sh
