@@ -21,21 +21,29 @@ igraph.to.gexf <- function(igraph.obj, position=NULL) {
   # Building nodes
   if (length(tmpnodes)) {
     nodes <-merge(tmpnodes,nodes, by.x="name", by.y="label")
-    nodes <- cbind(nodes, label=nodes$name, stringsAsFactors=FALSE)
+    if (!("label" %in% colnames(nodes))) 
+      nodes <- cbind(nodes, label=nodes$name, stringsAsFactors=FALSE)
     #tmpnodes <- subset(nodes, select=c(-id,-label))
-    nodes <- nodes[,c("id", "label")]
+    #nodes <- nodes[,c("id", "label")]
+  }
+  
+  # Building edges
+  if (length(tmpnodes)) {
+    edges <-merge(tmpedges,edges, by.x="name", by.y="label")
+    if (!("label" %in% colnames(nodes))) 
+      nodes <- cbind(nodes, label=nodes$name, stringsAsFactors=FALSE)
   }
   
   # Nodes Attributes
   x <- list.vertex.attributes(g)
   x <- x[!(x %in% "name")]
-  if (length(x)) nAtt <- NULL
-  else nAtt <- subset(tmpedges, select=x)
+  if (!length(x)) nAtt <- NULL
+  else nAtt <- subset(nodes, select=x)
   
   # Edges Attributes
   x <- list.edge.attributes(g)
   x <- x[!(x %in% "weight")]
-  if (length(x)) eAtt <- NULL
+  if (!length(x)) eAtt <- NULL
   else eAtt <- subset(tmpedges, select=x)
   
   # Edges Weights
@@ -76,7 +84,10 @@ igraph.to.gexf <- function(igraph.obj, position=NULL) {
 }
 
 gexf.to.igraph <- function(gexf.obj) {
-  
+
+  # Checks the class
+  if (!inherits(gexf.obj,"gexf")) stop("-graph- is not of -gexf- class.") 
+ 
   g <- gexf.obj
   rm(gexf.obj)
   
@@ -95,6 +106,16 @@ gexf.to.igraph <- function(gexf.obj) {
   if (length(x <- g$nodesVizAtt$color)) {
     V(g2)$color <- rgb(x$r/255,x$g/255,x$b/255,x$a/255)
   }
+
+  # Nodes atts
+  if (length(x <- subset(g$nodes, select=c(-id, -label) )) ) {
+    for(i in names(x)) g2 <- set.vertex.attribute(g2, i, value=x[,c(i)])
+  }
+
+  # Edges atts
+  if (length(x <- subset(g$edges, select=c(-id, -source, -target, -weight)) )) {
+    for(i in names(x)) g2 <- set.edge.attribute(g2, i, value=x[,c(i)])
+  } 
   
   # Edges Viz atts
   if (length(x <- g$edgesVizAtt$color)) {
