@@ -9,7 +9,10 @@ check.dpl.edges <- function(edges, undirected=FALSE, order.edgelist=TRUE) {
 ################################################################################  
   srce <- edges[,1]
   trgt <- edges[,2]
-  
+
+  if (any(is.na(edges) | is.null(edges) | is.nan(edges))) 
+    stop("No NA, NULL or NaN elements can be passed to this function.")
+ 
   nedges <- length(srce)
   
   result <- .C("RCheckDplEdges", 
@@ -40,6 +43,9 @@ switch.edges <- function(edges) {
 ################################################################################
 # Orders pairs of edges by putting the lowest id first as source
 ################################################################################
+  if (any(is.na(edges) | is.null(edges) | is.nan(edges))) 
+    stop("No NA, NULL or NaN elements can be passed to this function.")
+
   result <- .C(
     "RSwitchEdges",
     as.integer(NROW(edges)),
